MRD-3987:  content changes.

--- a/source/resources/ThreatRatingExplanationOfCalculation.html
+++ b/source/resources/ThreatRatingExplanationOfCalculation.html
@@ -1,7 +1,7 @@
-<!-- 
-Copyright 2005-2009, Foundations of Success, Bethesda, Maryland 
-(on behalf of the Conservation Measures Partnership, "CMP") and 
-Beneficent Technology, Inc. ("Benetech"), Palo Alto, California. 
+<!--
+Copyright 2005-2009, Foundations of Success, Bethesda, Maryland
+(on behalf of the Conservation Measures Partnership, "CMP") and
+Beneficent Technology, Inc. ("Benetech"), Palo Alto, California.
 
 This file is part of Miradi
 
@@ -23,7 +23,7 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 The first table shows the rule-based procedure for combining the rankings 
 <br></br>
 for the Scope and Severity variables to get a ranking of 
-<a href='none'><em>Threat Magnitude</em></a>.  
+Threat Magnitude.  
 <br></br>
 Under these rules, if a threat is rated 'low' on either variable, 
 then the magnitude is 'low' overall. 
