--- a/source/resources/wizard/DiagramView/RankDraftStrategiesStepRight.html
+++ b/source/resources/wizard/DiagramView/RankDraftStrategiesStepRight.html
@@ -19,7 +19,6 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 -->
           
 <div class='navigation'>
-
 Draft strategies can be rated on the following criteria:
 
 <p><strong>Potential Impact -</strong> If implemented, will the strategy lead to desired changes in the situation at your project site?</p>
@@ -41,15 +40,16 @@ Draft strategies can be rated on the following criteria:
 <li><b>Low</b> -The strategy is not ethically, technically, OR financially feasible.</p></li>
 </ul>
 
-These ratings are then rolled-up to give an overall summary rating for the strategy.  Note that if a draft strategy is assigned any "red" colored rating, then the summary rating will also be "red."
+These ratings are then rolled-up to give an overall summary rating for the strategy.  Note that if a draft strategy is assigned any "red" colored rating, then the summary rating will also be "red."<br><br>
+Here is a relatively simple roll-up of the overall Strategy Priority.  At higher levels, a project has to be both feasible AND have a high potential impact to score high.  But at lower levels, either low feasibility OR low impact gives an overall low priority. <BR><BR>
 
 
-<!-- </p
+
 <table>
               <tr>
               	<td align='right'>
-              		<img border='0' src='images/DiagramWizard/rankDraftStrategies.png' width= '522' height='355'>
+              		<img border='0' src='images/DiagramWizard/rankDraftStrategies.png' width= '550' height='200'>
               	</td>
               </tr>
             </table>
-          </div>-->
+          </div>
