--- a/source/resources/wizard/PlanningView/PlanningWizardFinalizeStrategicPlanStepRight.html
+++ b/source/resources/wizard/PlanningView/PlanningWizardFinalizeStrategicPlanStepRight.html
@@ -20,7 +20,7 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 
 <div class='navigation'>
 
-You can use the <code class='toolbarbutton'>&lt;Edit&nbsp;Progress&nbsp;Report&gt;</code> button to update the status of a given strategy:
+You can use the <code class='toolbarbutton'>&lt;Progress&nbsp;Report&gt;</code> side tab in the lower panel to update the status of a given strategy:
           
 <ul>
 <li><strong>Scheduled for Future Implementation:</strong> Strategy is not yet started</li>
