--- a/source/resources/wizard/WorkPlanView/WorkPlanAssignResourcesStepLeft.html
+++ b/source/resources/wizard/WorkPlanView/WorkPlanAssignResourcesStepLeft.html
@@ -24,7 +24,9 @@ There are several ways to assign an existing resource to a strategy, indicator, 
 
 <p>You can add multiple resources if necessary.</p>
 
-<p>Once you have assigned resources, you can then allocate specific work days (orange columns) or expenses (light green columns) to that resource. Click in the appropriate cell and type in the number of work days or expense amount in the project currency.</p>
+<p>Once you have assigned resources, you can then allocate specific work days (orange columns) to that resource. Click in the appropriate cell and type in the number of work days.</p>
+
+<p>You can also assign project expenses to any strategy, indicator, activity, method or task.  Expenses are planned purchases entered in the currency for the project and can be entered at any level of temporal detail by using the light green expenses columns.
 
 <p>Work units are typically estimated in number of days.  If you would prefer to do your estimates using the concept of Full Time Equivalents (FTEs), you can right click in any work units cell and select <code class='toolbarbutton'>&lt;Fraction&nbsp;of&nbsp;FTE...&gt;</code> to bring up a calculator that will assist you in conversion of FTE values into days.</p>
 
