--- a/source/resources/wizard/DiagramView/StrategicPlanDevelopObjectivesStepLeft.html
+++ b/source/resources/wizard/DiagramView/StrategicPlanDevelopObjectivesStepLeft.html
@@ -28,11 +28,12 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 <li><p><strong>Objective Name:</strong> The title of the objective. Generally 3-5 words (e.g., Reduce Shark Fishing)</p></li>
 <li><strong>Text:</strong> The complete objective statement that meets the criteria for a good objective.
 <li><strong>Comments:</strong> Any additional comments about the objective.</li>
+<li><strong>Progress Percents:</strong>Use this side tab to enter progress percent updates for this objective.
 </ul> 
 
-<p>If you want to use an existing objective from another factor, click on the <code class='toolbarbutton'>&lt;Clone&nbsp;Objective&gt;</code> button and follow the instructions. To edit or delete an objective, click on the desired row and then either edit the text in the box at the bottom or click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Objective&gt;</code> button.</p>
+<p>If you want to use an existing objective from another factor, click on the <code class='toolbarbutton'>&lt;Clone&nbsp;From&nbsp;Existing&gt;</code> button and follow the instructions. To edit or delete an objective, click on the desired row and then either edit the text in the box at the bottom or click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Objective&gt;</code> button.</p>
 
-<p>You can also view and edit all your project's objectives using the <i>"Objectives Only"</i> setting in the <code class='toolbarbutton'>&lt;Planning&nbsp;View&gt;</code>.</p>
+<p>You can also view and edit all your project's objectives using the <i>"Objectives Only"</i> setting in the <code class='toolbarbutton'>&lt;Strategic Plan&gt;</code> view.</p>
 
 <p>You can also show your project's activities on a results chain. Double click on a strategy and then click on the <code class='toolbarbutton'>&lt;Activities&gt;</code> tab. Click on the buttons to create a new activity or share an exsiting one. For each activity, you can then fill in the <strong>name</strong> and <strong>details</strong> fields. You can also click the <code class='toolbarbutton'>&lt;Show Activity on this page&gt;</code> button to display a stress in a box on the results chain page, or the <code class='toolbarbutton'>&lt;Hide Activity on this page&gt;</code> button to hide it.</p>
 
