--- a/source/resources/wizard/PlanningView/PlanningOverviewStepLeft.html
+++ b/source/resources/wizard/PlanningView/PlanningOverviewStepLeft.html
@@ -51,6 +51,7 @@ in one table for quick comparisons and editing.</p>
 <p>
 <b>Custom Views</b> - In addition to the standard planning views, Miradi also enables you to create your own custom planning views by choosing which objects to display in the rows and columns of the planning table.  This can be a good utility for creating custom report views.</p>
 
+<p class='hint'><strong>Hint:</strong> Some users may find that the Action Plan and Monitoring plan views do not show all the information they would like, or have it organized in the way they would prefer.  The flexibility provided by the Custom Tab allows for the creation of Action and Monitoring plans for your specific needs.  </p>
 
-<p class='hint'><strong>New Feature Hint:</strong>In Miradi 3.0, the former Planning View has been split into the Strategic and Work Plan views and has been dramatically improved.</p>
+<p class='hint'><strong>New Feature Hint:</strong>Some users may prefer to have all Targets and Goals listed only once at the top of the planning view tree while other may prefer to have them appear under each diagram in which they appear.  It is now possible to choose where Targets and Goals are displayed by going to the planning tab in <code class='toolbarbutton'>&lt;Edit/Preferences&gt;</code> and selecting the <code class='toolbarbutton'>&lt;Strategic&nbsp;Planning&gt;</code> side tab</p>
 
