--- a/source/resources/wizard/PlanningView/PlanningWizardFinalizeMonitoringPlanStepRight.html
+++ b/source/resources/wizard/PlanningView/PlanningWizardFinalizeMonitoringPlanStepRight.html
@@ -28,7 +28,7 @@ Indicators can be assigned different <i>priority ratings</i> as follows:
 <li><strong>Low: </strong> Not necessary to monitor. </li>
 </ul>
 
-<p>You can use the <code class='toolbarbutton'>&lt;Edit&nbsp;Progress&nbsp;Report&gt;</code> button to update the status of a given indicator:</p>
+<p>You can use the <code class='toolbarbutton'>&lt;Progress&nbsp;Report&gt;</code> side tab in the lower panel to update the status of a given indicator:</p>
           
 <ul>
 <li><strong>Scheduled for Future Implementation:</strong> Indicator is not yet started</li>
