--- a/source/resources/wizard/TargetViabilityView/TargetViabilityOverviewStepRight.html
+++ b/source/resources/wizard/TargetViabilityView/TargetViabilityOverviewStepRight.html
@@ -25,6 +25,7 @@ Viability analysis asks you to look at each of your conservation targets careful
 
 <h3>Navigation Hints for the Target Viability View</h3>
 The Viability Table will give you an overview of the viability status of each target. To <span class='task'>see details about a target or its attributes</span>, click the appropriate line on the table and the details will appear in the panel below.<br>
+<p class='hint'><strong>Hint:</strong>  The <code class='toolbarbutton'>&lt;Expand To&gt;</code> button enables you to quickly expand or collapse the viability table to any level making it easy to get the view you want.
 		         
 <p></p>
 <table width='100%'><tr><td align='center'>
