--- a/source/resources/wizard/ThreatMatrixView/ThreatStressCheckThreatRatingStepRight.html
+++ b/source/resources/wizard/ThreatMatrixView/ThreatStressCheckThreatRatingStepRight.html
@@ -21,4 +21,4 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 <div class='navigation'>
 <strong>Target-Threat Rating - </strong>Miradi calculates threat ratings using a rule-based system for combining the scope, severity, contribution, and irreversibility criteria.  These procedures involve specifying rules as to how different parameters should be combined with one another.
 
-<!-- NEED TO CREATE AN EQUIVALENT PAGE TO <a href='Definition:ShowRulesCalculations'>Click here</a> for a detailed description of this system.</font></p>--></div>
+<a href='Definition:ShowRulesStressCalculations'>Click here</a> for a detailed description of how Miradi calculates the rank for a specific threat to a target, and <a href='Definition:ShowRulesBundles'>click here</a> for a detailed description of how Miradi calculates row and column totals.</p></div>
