--- a/source/resources/wizard/ThreatMatrixView/ThreatStressOverviewStepRight.html
+++ b/source/resources/wizard/ThreatMatrixView/ThreatStressOverviewStepRight.html
@@ -22,7 +22,7 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 
 <H3>Guide to the Stress Based Threat Rating Summary Table</h3>
 
-The <strong>far left hand column </strong>is a listing of all threats and the <strong>top row </strong>is a listing of all targets for your project. <!--To <strong>sort the table, </strong>click on any cell in the header row to sort by that column.--> You can <strong>move</strong> or <strong>change the width </strong>of columns and <strong>change the height</strong> of rows.<p>The cells of the table show the overall threat ratings for each threat on each target that it affects.  You can click on a cell to see the details that go into its  threat ratings. To <strong>create a new link</strong> between a threat and target, right (alt) click on a blank cell in the table.
+The <strong>far left hand column </strong>is a listing of all threats and the <strong>top row </strong>is a listing of all targets for your project. To <strong>sort the table, </strong>click on any cell in the header row to sort by that column.You can <strong>move</strong> or <strong>change the width </strong>of columns and <strong>change the height</strong> of rows.<p>The cells of the table show the overall threat ratings for each threat on each target that it affects.  You can click on a cell to see the details that go into its  threat ratings. To <strong>create a new link</strong> between a threat and target, right (alt) click on a blank cell in the table.
 
 <p>Finally, the table contains three types of summary ratings:</p>
 <ul>
@@ -30,5 +30,4 @@ The <strong>far left hand column </strong>is a listing of all threats and the <s
 <li>The <strong>row on the bottom </strong>contains a summary of the overall threat rating for each target.</li>
 <li>Finally, the <strong>lowest right hand cell </strong>contains a summary of the threat rating for your entire project.</li></ul>
 
-
-<!--</p><p></p><table width='100%'><tr><td align='center'><img src='images/ThreatRating/Wizard/threat-nav.png' width='527' height='381'></img></td></tr></table></font></p>--></div>
+<p>These summary ratings are not entered directly, but are calculated as you rate the specific effects of threats on targets. Miradi calculates threat ratings using a rule-based system.   The scope and severity are used to calculate the magnitude, and the contribution and irreversibility criteria are combined to calculate a source rank.  The magnitude and source ranks are then used to calculate the summary stress rating and the summary stress ratings are then used to calculate the rank of a threat to a target which is what is displayed in the threat ratings table. <a href='Definition:ShowRulesStressCalculations'>Click here</a> for a detailed description of how Miradi calculates the rank for a specific threat to a target, and <a href='Definition:ShowRulesBundles'>click here</a> for a detailed description of how Miradi calculates row and column totals.</p></div>
