MRD-3991, changed "Clone.... to " "Create...

--- a/source/resources/wizard/DiagramView/MonitoringWizardDefineIndicatorsStepLeft.html
+++ b/source/resources/wizard/DiagramView/MonitoringWizardDefineIndicatorsStepLeft.html
@@ -52,7 +52,7 @@ associated with it. To assign a method, select the <code class='toolbarbutton'>&
 
 <P>Miradi will automatically display the Future Status value, along with a blue oval icon, in the cell of the monitoring table corresponding to the desired future status.</P>
 
-<p>If you want to use an existing indicator from another factor, click on the <code class='toolbarbutton'>&lt;Clone&nbsp;From&nbsp;Existing&gt;</code> button and follow the instructions. To edit or delete an indicator, click on the desired row and then either edit the text in the box at the bottom or click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Indicator&gt;</code> button.</p>
+<p>If you want to use an existing indicator from another factor, click on the <code class='toolbarbutton'>&lt;Create&nbsp;From&nbsp;Existing&gt;</code> button and follow the instructions. To edit or delete an indicator, click on the desired row and then either edit the text in the box at the bottom or click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Indicator&gt;</code> button.</p>
 
 <p>You can also view and edit all of the indicators for your project by using the <i>"Indicators Only"</i> view under the <code class='toolbarbutton'>&lt;Lists&gt;</code> tab in the <code class='toolbarbutton'>&lt;Strategic&nbsp;Plan&gt;</code> view.</p>
 
