--- a/source/resources/wizard/DiagramView/StrategicPlanDevelopGoalStepLeft.html
+++ b/source/resources/wizard/DiagramView/StrategicPlanDevelopGoalStepLeft.html
@@ -29,6 +29,6 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 <li><strong>Comments:</strong> Any additional comments about the goal.</li>
 </ul> 
 
-<br></br>If you want to use an existing goal from another target, click on the <code class='toolbarbutton'>&lt;Clone&nbsp;From&nbsp;Existing&gt;</code> button and follow the instructions.	To edit or delete a goal, click on the desired row and then either edit the text in the box at the bottom or click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Goal&gt;</code> button.
+<br></br>If you want to use an existing goal from another target, click on the <code class='toolbarbutton'>&lt;Create&nbsp;From&nbsp;Existing&gt;</code> button and follow the instructions.	To edit or delete a goal, click on the desired row and then either edit the text in the box at the bottom or click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Goal&gt;</code> button.
 
 <p>You can also view and edit all your project's goals using the <i>"Goals Only"</i> view under the Lists tab in the <code class='toolbarbutton'>&lt;Strategic&nbsp;Plan&nbsp;View&gt;</code>.</p>			
