--- a/source/resources/wizard/DiagramView/StrategicPlanDevelopObjectivesStepLeft.html
+++ b/source/resources/wizard/DiagramView/StrategicPlanDevelopObjectivesStepLeft.html
@@ -31,7 +31,7 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 <li><strong>Progress Percents:</strong>Use this side tab to enter progress percent updates for this objective.
 </ul> 
 
-<p>If you want to use an existing objective from another factor, click on the <code class='toolbarbutton'>&lt;Clone&nbsp;From&nbsp;Existing&gt;</code> button and follow the instructions. To edit or delete an objective, click on the desired row and then either edit the text in the box at the bottom or click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Objective&gt;</code> button.</p>
+<p>If you want to use an existing objective from another factor, click on the <code class='toolbarbutton'>&lt;Create&nbsp;From&nbsp;Existing&gt;</code> button and follow the instructions. To edit or delete an objective, click on the desired row and then either edit the text in the box at the bottom or click on the <code class='toolbarbutton'>&lt;Delete&nbsp;Objective&gt;</code> button.</p>
 
 <p>You can also view and edit all your project's objectives using the <i>"Objectives Only"</i> setting in the <code class='toolbarbutton'>&lt;Strategic Plan&gt;</code> view.</p>
 
