--- a/source/resources/FteDaysPerYearDialogExplanation.html
+++ b/source/resources/FteDaysPerYearDialogExplanation.html
@@ -18,7 +18,12 @@ You should have received a copy of the GNU General Public License
 along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<p>Enter a value below to assign a fraction of a Full Time Employee (FTE) 
-for the selected work item and time period. Miradi will convert the percentage 
-to the appropriate number of days, according to the Planning configuration setting 
-which is shown here.</p>
+<p>
+Enter a value below to assign a fraction of a Full Time Employee (FTE) 
+for the selected work item and time period. Miradi will use the fraction 
+to calculate the appropriate number of days using the FTE Days Per Year value 
+shown below. 
+The FTE Days Per Year value is set in Work Plan Settings 
+under the Planning tab in the Summary view.
+
+</p>
