MRD-4029: Fix missing spaces in HTML and in Spanish translation which caused partner images not to appear in Help/About

--- a/source/resources/help/AboutExtra.html
+++ b/source/resources/help/AboutExtra.html
@@ -39,14 +39,12 @@ border=0>
 
 <td align='center'>
 <IMG 
-src="icons/wcs-64.gif" width=63 height=64
-border=0>
+src="icons/wcs-64.gif" width=63 height=64 border=0>
 </td>
 
 <td align='center'>
 <IMG 
-src="icons/WWF-64.jpg" width=49 height=64
-border=0>
+src="icons/WWF-64.jpg" width=49 height=64 border=0>
 </td>
 </tr>
 </table>
