--- a/source/resources/help/Credits.html
+++ b/source/resources/help/Credits.html
@@ -123,7 +123,7 @@ review the software and provide insights include:</P>
 <H3>Technical Contributions Drawn From</H3>
 <UL>
   <LI><STRONG>Third Party Libraries:</STRONG> BrowserLauncher, 
-  JCalendar, JGraph, JHLabs, Jing, JTreeTable, JarBuilder, install4j 
+  JCalendar, JGraph, JHLabs, Jing, JTreeTable, JarBuilder, install4j, JOrtho
   <LI><STRONG>Development Tools:</STRONG> Ant, CVS, Eclipse, Java, JUnit, NSIS, POEdit, Ruby, Subversion 
   <LI><STRONG>Martus:</STRONG> Benetech's software for human rights 
 groups</LI></UL>
