--- a/source/resources/wizard/WorkPlanView/WorkPlanOverviewStepLeft.html
+++ b/source/resources/wizard/WorkPlanView/WorkPlanOverviewStepLeft.html
@@ -30,3 +30,7 @@ that you need to undertake to implement your strategic and monitoring plans.
 
 <p>As a general rule, you should have a detailed work plan for the coming year and a rough plan for the years after that.  </p>
 
+<p class='hint'><b>Hint:</b>The <strong>Analysis</strong> tab supports the creation of custom views of your work plan data by specifying how you would like to group the work units and expenses.  For example, it is possible to create a report showing salary expenses broken down by funding source and then accounting code.  
+
+<p class='hint'><b>Hint:</b>There are two new additional categories that can be used to classify work units and expenses in more detail.
+
