MRD-4034: partial fix,  more to come

--- a/source/resources/wizard/DiagramView/DiagramWizardIdentifyDirectThreatStepRight.html
+++ b/source/resources/wizard/DiagramView/DiagramWizardIdentifyDirectThreatStepRight.html
@@ -25,7 +25,7 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 
 <p class='hint'><strong>Hint:</strong> It is important to distinguish between the direct threats that immediately affect biodiversity targets and the <a href='Definition:IndirectThreat' class='definition'>contributing factors</a> (also called indirect threats, opportunities, or root causes) that lead to the direct threats. In this step, you should only consider direct threats.</p>
 
-<p class='hint'><strong>Hint:</strong> You may want to browse the <a href="http://conservationmeasures.org/CMP/IUCN/Site_Page.cfm">Classification of Direct Threats</a> for ideas of direct threats.</p>
+<p class='hint'><strong>Hint:</strong> You may want to browse the <a href="http://www.conservationmeasures.org/initiatives/threats-actions-taxonomies/threats-taxonomy">Classification of Direct Threats</a> for ideas of direct threats.</p>
 
 </div>
 
