--- a/source/resources/wizard/WorkPlanView/WorkPlanOverviewStepLeft.html
+++ b/source/resources/wizard/WorkPlanView/WorkPlanOverviewStepLeft.html
@@ -26,11 +26,16 @@ and
 <a href='Definition:Task' class='definition'>tasks</a>
 that you need to undertake to implement your strategic and monitoring plans.
 
-<p>The work plan view also enables you to develop a <a href='Definition:Budget' class='definition'>budget</a> for your project (in the future, it will also enable you to manage <a href='Definition:ActualExpenditures' class='definition'>actual&nbsp;expenditures</a>). The budget shows the planned costs and funding sources for the activities/methods and tasks that you need to undertake to implement your strategic and monitoring plans.</p>
+<p>
+The work plan view also enables you to develop a budget for your project
+(in the future, it will also enable you to manage actual expenditures).
+The budget shows the planned costs for the activities/methods and tasks
+that you need to undertake to implement your strategic and monitoring
+plans. These work units and expenses can be categorized by funding
+sources, accounting codes, and two additional user-defined budget
+categories. 
+</p>
 
 <p>As a general rule, you should have a detailed work plan for the coming year and a rough plan for the years after that.  </p>
 
-<p class='hint'><b>Hint:</b>The <strong>Analysis</strong> tab supports the creation of custom views of your work plan data by specifying how you would like to group the work units and expenses.  For example, it is possible to create a report showing salary expenses broken down by funding source and then accounting code.  
-
-<p class='hint'><b>Hint:</b>There are two new additional categories that can be used to classify work units and expenses in more detail.
-
+<p>The <strong>Analysis</strong> tab supports the creation of custom views of your work plan data by specifying how you would like to group the work units and expenses.  For example, it is possible to create a report showing salary expenses broken down by funding source and then accounting code.  
