MRD-4242: Mention analysis tab in Reconcile wizard page

--- a/source/resources/wizard/WorkPlanView/BudgetWizardReconcileActualExpendituresStepRight.html
+++ b/source/resources/wizard/WorkPlanView/BudgetWizardReconcileActualExpendituresStepRight.html
@@ -24,9 +24,10 @@ along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 <ul>
 <li><strong>By Accounting Code -</strong> Reports of money spent in each accounting code category.  These are useful for reporting to your organization's accounting department and to donors.</li>          
 <li><strong>By Activity -</strong> Reports of money spent by activity, strategy, objective, and/or goal.  This is the basis for Activity Based Costing (ABC) and is essential to improve management effectiveness.</li> 
-<li><strong>By Funding Source -</strong> Reports of money spent by each funding source.  These are useful for managing your cash-flow and for reporting to donors.</li>          
+<li><strong>By Funding Source -</strong> Reports of money spent by each funding source.  These are useful for managing your cash-flow and for reporting to donors.</li>  
+<li><strong>By Other Miscelaneous Categories -</strong> Many organizations have more complex accounting systems.  Miradi includes 2 additional budgeting categories that can be used to further clasify expenses.
 <li><strong>Against Budgets -</strong> Reports of money spent against the projections in your budgets. These are useful for managing your cash-flow and for improving your forecasting ability over time.</li>
 </ul>
-
+<p><strong>The Analysis Tab:</strong>  This tab allows for the creation of more complex views of the budget data by grouping the expenses at various category levels.  For instance, view which resources are associated to a given funding source, or see how expenses break down amoung your accounting codes per funding source.  These reports can then be exported as RTF or Tab delimited files for use in other accounting systems.
 </div>
 
