--- a/source/resources/wizard/WorkPlanView/BudgetWizardReconcileActualExpendituresStepLeft.html
+++ b/source/resources/wizard/WorkPlanView/BudgetWizardReconcileActualExpendituresStepLeft.html
@@ -18,7 +18,7 @@ You should have received a copy of the GNU General Public License
 along with Miradi.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-Future versions of Miradi will allow you to generate reports on <a href='Definition:ActualExpenditures' class='definition'>actual expenditures</a> across different time periods by accounting code, activity, funding source, and against budgets.
+Future versions of Miradi will allow you to generate reports on <a href='Definition:ActualExpenditures' class='definition'>actual expenditures</a> across different time periods by accounting code, activity, funding source, the 2 additional categories and against budgets.
 
-<p>Currently, it is possible to review all work and expenses that have been assigned to a given Project Resource, Accounting Code or Funding Source for a given time period.  This should aid in your planning by helping to determine your Resource and Funding needs per fiscal quarter or year.</p>
+<p>The Analysis tab allows for the review all work and expenses that have been assigned to a given Project Resource, Accounting Code, Funding Source and the two additional categories for a given time period.  This should aid in your planning by helping to determine your Resource and Funding needs per fiscal quarter or year.  It can also help you analyze how your projected project costs are being applied to help refine per strategy implementation costs or to identify what types of activities account for the largest expenses.</p>
 <p class='hint'><b>Hint:</b>You can create individual work plans by using the <code class='toolbarbutton'>&lt;Filter&nbsp;by&nbsp;Resource...&gt;</code> button and selecting the resources you want to view.  This will update the Work Plan to only show work days and budget totals for the selected resource(s).</p>
